# MusicKit

./: .dir.tiff  GNUmakefile.in  Makefile.in  README.md  autogen.sh
CVSROOT/: cvsignore  (+3 more)
MusicKit/: .gitignore  GNUmakefile.in  GNUmakefile.preamble.in  Makefile.in  README.md  README.rtf  autogen.sh  configure.ac  cvs_symbolic_links.tar
MusicKit/Applications/: GNUmakefile  Makefile  Makefile.postamble  Makefile.preamble
MusicKit/Applications/Ensemble/: EnsembleApp.m  EnsembleDocument.h  EnsembleDocument.m  Ensemble_main.m  EnvelopeView.h  GenericDocument.h  GenericDocument.m  Makefile  PB.project  ParamInterface.h  ParamInterface.m  Preferences.h  Preferences.m  ProgramChanger.h  QuickText.h  QuickText.m  Settings.h  XAxisView.h  YAxisView.m  fourdown.tiff  hnote.tiff  midiplug.tiff  muteup.tiff  nomidiplug.tiff  onedown.tiff  playbuttonH.tiff  recordup.tiff  stopbutton.tiff  threeup.tiff  twoup.tiff
MusicKit/Applications/EnvelopeEd/: .places5_01.wmd  Controller.h  Envelope.h  Envelope.m  EnvelopeEd-Info.plist  EnvelopeEd.icns  EnvelopeEd.services  EnvelopeEd.tiff  EnvelopeEd_main.m  EnvelopeView.h  EnvelopeView.m  GNUmakefile  Makefile  PB.project  README.rtf  TODO  below.tiff  below_alt.tiff  cross.tiff  crossfill.tiff
MusicKit/Applications/Looching/: Bark.h  Bark.m  LoochPerformer.h  LoochPerformer.m  LoochWaves.h  Looching.h  Looching.iconheader  Looching.m  Looching_main.m  LoochityDog.tiff  Makefile  Makefile.preamble  PB.project  RandomIzer.h  RandomIzer.m  Stopit.h  Stopit.m
MusicKit/Applications/MusicKitPrefs.bproj/: Makefile  Makefile.preamble  MusicKitPrefs.m  MusicKitPrefs.tiff  PB.project  driverinfo.m
MusicKit/Applications/PatchCord/: Bank.h  Bank.m  CustomInfo.plist  InfoPanelController.h  InfoPanelController.m  MIDISysExSynth.h  MIDISysExSynth.m  Makefile  PB.project  PatchBank.h  PatchBank.m  PatchBankDocument.h  PatchBankDocument.m  PatchCord-Info.plist  PatchCordController.h  PatchCordController.m  PreferencesManager.h  SynthLoader.h  SynthLoader.m  SysExMessage.h  SysExMessage.m  SysExReceiver.h  SysExReceiver.m  UnhandledSynth.h  UnhandledSynth.m
MusicKit/Applications/PianoRoll/: Distributor.h  Distributor.m  Document.h  Document.m  Makefile  PB.project  PartView.h  PartView.m  PianoRoll-Info.plist  PianoRoll_main.m  PlayScore.h  PlayScore.m  TadPole.h  TadPole.m
MusicKit/Applications/ResoLab/: Link.tiff  Makefile  Overview.txt  PB.project  Reso.tiff  ResoController.h  ResoController.m  ResoLab.iconheader  SourceFilterIns.h  SourceFilterIns.m  SpectrumView.h  SpectrumView.m.safe  Unlink.tiff  Xforms.h  Xforms.m  Z3DPlaneView.h  Z3DPlaneView.m  ZPlaneView.h  ZPlaneView.m
MusicKit/Applications/ResonSound/: Makefile  PB.project  Reson.tiff  ResonController.h  ResonController.m  ResonSound.h  Reson_main.m  help.rtfd  help.sgml
MusicKit/Applications/ScorePlayer/: Animator.h  Animator.m  ErrorLog.h  ErrorLog.m  GNUmakefile  MKAlert.h  MKAlert.m  Makefile  Midi.tiff  MyApp.h  MyApp.m  PB.project  README  ScorePlayer-Info.plist  ScorePlayer.iconheader  ScorePlayer.strings  ScorePlayerController.h  ScorePlayerController.m  ScorePlayerDoc.tiff  ScorePlayer_main.m  Sound.tiff  help.rtfd  playH.tiff  stop.tiff
MusicKit/Applications/Spectro/: GNUmakefile  Makefile  Makefile.postamble  Makefile.preamble  PB.project  PrefController.h  PrefController.m  SaveToController.m  ScrollingSound.h  ScrollingSound.m  ScrollingSpectrum.h  ScrollingSpectrum.m  SignalProcessor.h  SignalProcessor.m  SoundController.h  SoundController.m  SoundDocument.h  SoundDocument.m  SoundInfo.h  SoundInfo.m  Spectro-Info.plist  Spectro.icns  Spectro.iconheader  SpectroController.h  SpectroController.m  SpectroInfo.plist  Spectro_main.m  SpectrumDocument.h  SpectrumDocument.m  SpectrumView.h  SpectrumView.m  SubSoundView.h  SubSoundView.m  WaterfallView.h  WaterfallView.m
MusicKit/Applications/TwoWaves/: Controller.h  Controller.m  GNUmakefile  Makefile  Makefile.postamble  PB.project  TwoWaves-Info.plist  TwoWaves.icns  TwoWaves_main.m
MusicKit/Applications/WaveEdit/: FFTControl.h  FFTControl.m  FFTControl.m.v_4.0  FuncView.h  Makefile  Makefile.postamble  ModView.h  PB.project  PhiView.h  Wave.h  WaveEdit_main.m  foo.tiff
MusicKit/Applications/edsnd/: Animator.h  Animator.m  EdSoundView.h  EdSoundView.m  EdsndApp.h  EdsndApp.m  Envelope.m  EnvelopeView.h  EnvelopeView.m  FFT.h  FFTView.h  Makefile  Makefile.postamble  PB.project  PWenv.psw  README  SNDindirect.m  ScrollingSound.h  SoundDocument.h  SoundDocument.m  SpectrumView.h  SpectrumView.m  Stopwatch.h  Stopwatch.m  fft_net.c  fftfuncs.h  fftfuncs.m
MusicKit/Documentation/: DocIntroduction.rtfd  DocIntroduction.sgml  DocIntroduction.xml  Frameworks.html.in  Makefile  Makefile.in  MusicKit_README.css  MusicKit_README.sgml  MusicKit_README.xml  MusicKit_roadmap.html  PublishedDocumentation.bib
MusicKit/Documentation/Administration/: ContributingSoftware  FTP-Info  FixingBugs  Installation  MidiHardwareInfo.rtfd  OtherNetSoftware  Projects  ReportingBugs  Usage.rtf  Version  VersionNumbering.rtf
MusicKit/Documentation/Applications/: Ensemble.rtf  Ensemble.sgml  Ensemble.xml  MusicApplications.rtf  MusicApplications.xml  ScorePlayer.rtfd  WaveEdit.rtf  playscore.rtf
MusicKit/Documentation/Concepts/: IntroMusicKit.sgml  IntroMusicKit.xml  IntroSndKit.sgml  IntroSndKit.xml  MIDITimeCode.sgml  MIDITimeCode.xml  MusicData.rtfd  MusicData.sgml  MusicData.xml  MusicKitConcepts.sgml  MusicKitConcepts.xml  MusicPerformance.rtfd  MusicPerformance.sgml  MusicPerformance.xml  MusicSynthAndProc.rtfd  MusicSynthAndProc.sgml  MusicSynthAndProc.xml  MusicTables.sgml  MusicTables.xml  Overview.rtf  SystemOverview.sgml  SystemOverview.xml
MusicKit/Documentation/HeaderDoc/: frameworks.doxy  headerDoc2HTML.config  headerdoc2doxygen  headerdoc2doxygen.awk  html2HeaderDoc.pl
MusicKit/Documentation/Motorola56K/: .dir.tiff
MusicKit/Examples/: .dir.tiff  GNUmakefile  Makefile
MusicKit/Frameworks/: .gitignore  GNUmakefile.in  Makefile_skeleton
MusicKit/MusicKit.xcode/: project.pbxproj
MusicKit/MusicKit.xcodeproj/: project.pbxproj
(+3509 files in other folders)
